--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .idea
 # Test binary, built with `go test -c`
 *.test
-
+.DS_Store
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
